--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-gravity-forms-v2-api",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Gravity Forms REST API v2 integration for n8n workflows, AI tools, and triggers.",
   "keywords": [
     "n8n",
@@ -19,7 +19,7 @@
     "url": "https://github.com/jezweb/n8n-nodes-gravity-forms/issues"
   },
   "author": "Jez (Jeremy Dawes) <jeremy@jezweb.net>",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
