Complete rename to n8n-nodes-gforms-api
- Renamed package to avoid conflicts with existing packages
- Changed all node class names to be unique (GFormsApi, GFormsApiTrigger)
- Renamed credential to GFormsApiAuth
- Updated all references throughout the codebase
- Fresh start with clean CommonJS configuration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "n8n-nodes-gravity-forms-v2-api",
-  "version": "0.2.2",
-  "description": "Gravity Forms REST API v2 integration for n8n workflows, AI tools, and triggers.",
+  "name": "n8n-nodes-gforms-api",
+  "version": "0.1.0",
+  "description": "WordPress Gravity Forms REST API integration for n8n workflows, AI tools, and triggers.",
   "keywords": [
     "n8n",
     "n8n-community-node-package",
